[package]
name = "reports_graphql_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-web-lab = "0.19.1"
env_logger = "0.10.0"
juniper = "0.15.11"
log = "0.4.19"
